fix: tabbar is covered by browser

--- a/app/src/pages/app.module.scss
+++ b/app/src/pages/app.module.scss
@@ -1,6 +1,8 @@
 .home {
   height: 100vh;
   position: relative;
+  padding-bottom: env(safe-area-inset-bottom);
+  overflow: hidden;
   overflow-y: hidden;
 
   .header {
